2016-01-18  Richard Larsson   <ric.larsson@gmail.com>
	
	* arts-2-3-414
	
	* src/m_jacobians.cc,methods.cc:  Fix for big bug I introduced
	unwittingly.  I had mistakenly assumed that (jacobianAddAbsSpecies) 
	was to calculate atmospheric species and not species tags.
	Now, the method takes the input parameter for_species_tag to work 
	on species tags as in the past.  When this evaluates true,
	the old behavior is returned.  When it evaluates true, then
	new behavior of looking for atmospheric species takes effect.
	
	* src/jacobian.cc:  Fix check and throws error when appropriate in
	(get_pointers_for_analytical_jacobians).
	
	* src/m_abs_lookup.cc:  (abs_speciesAdd2) called jacobianAddAbsSpecies
	manually.  So it calls it with default behavior as before,
	for_species_tag=1.
	
2016-01-18  Oliver Lemke  <olemke@core-dump.info>

	* src/matpackII.cc (Sparse::list_elements):

	Remove 'it' as first argument in for loop to avoid statement with no
	effect warning.

	* 3rdparty/Eigen/src/Core/products/TriangularSolverMatrix.h
	(triangular_solve_matrix):

	Avoid compiler warning by not shadowing a local variable with another.

	* 3rdparty/Eigen/src/SparseCore/AmbiVector.h,

	Add explicit casts to size_t and Index to avoid implicit type
	conversion warnings.

	* 3rdparty/Eigen/src/SparseCore/SparseView.h (SparseView::SparseView):

	Fix compiler warnings by not shadowing member variables with function
	parameters in constructor.

2016-01-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-412

	* controlfiles/general/agendas.arts: After email from Elisa,
	revised agenda templates for refractive index of air. Two ones
	were wrong. Added Ignore(rtp_vmr) to
	refr_index_air_agenda__GasInfraredEarth. And Ignore(rtp_pressure)
	and Ignore(rtp_temperature) to
	refr_index_air_agenda__FreeElectrons.

2016-01-13  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-411

	* README: Added lapack to prerequisites.

	* controlfiles/artscomponents/montecarlo/mc_incoming.xml:
