@@ -1,3 +1,11 @@
+2016-01-18  Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-415
+
+	* src/m_cloudbox.cc, methods.cc:
+	Added WSM ScatSpeciesExtendTemperature to extend single scattering data
+	temperature range. Work in progress! Not tested yet. No doc yet.
+
 2016-01-18  Richard Larsson   <ric.larsson@gmail.com>
 	
 	* arts-2-3-414
@@ -18,6 +26,8 @@
 	for_species_tag=1.
 	
 2016-01-18  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-413
 
 	* src/matpackII.cc (Sparse::list_elements):
 
